src/test/ui/impl-trait/multiple-lifetimes/ordinary-bounds-unrelated.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ordinary-bounds-unrelated.rs:18:74
   |
LL | fn upper_bounds<'a, 'b, 'c, 'd, 'e>(a: Ordinary<'a>, b: Ordinary<'b>) -> impl Trait<'d, 'e>
   |                                                                          ^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Ordinary<'_>` captures the scope of call-site for function at 23:1
  --> $DIR/ordinary-bounds-unrelated.rs:23:1
   |
LL | / {
LL | |     // Hidden type `Ordinary<'0>` with constraints:
LL | |     //
LL | |     // ```
...  |
LL | |     if condition() { a } else { b }
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
